; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_pt.c_print_candidates.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_pt.c_print_candidates.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"candidates are:\00", align 1
@NULL_TREE = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [8 x i8] c"%s %+#D\00", align 1
@.str.2 = private unnamed_addr constant [16 x i8] c"               \00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_candidates(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8** %4, align 8
  %6 = load i64, i64* %2, align 8
  store i64 %6, i64* %3, align 8
  br label %7

7:                                                ; preds = %26, %1
  %8 = load i64, i64* %3, align 8
  %9 = load i64, i64* @NULL_TREE, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %29

11:                                               ; preds = %7
  %12 = load i64, i64* %3, align 8
  %13 = call i64 @TREE_VALUE(i64 %12)
  store i64 %13, i64* %5, align 8
  br label %14

14:                                               ; preds = %22, %11
  %15 = load i64, i64* %5, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %25

17:                                               ; preds = %14
  %18 = load i8*, i8** %4, align 8
  %19 = load i64, i64* %5, align 8
  %20 = call i8* @OVL_CURRENT(i64 %19)
  %21 = call i32 @error(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* %18, i8* %20)
  br label %22

22:                                               ; preds = %17
  %23 = load i64, i64* %5, align 8
  %24 = call i64 @OVL_NEXT(i64 %23)
  store i64 %24, i64* %5, align 8
  br label %14

25:                                               ; preds = %14
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0), i8** %4, align 8
  br label %26

26:                                               ; preds = %25
  %27 = load i64, i64* %3, align 8
  %28 = call i64 @TREE_CHAIN(i64 %27)
  store i64 %28, i64* %3, align 8
  br label %7

29:                                               ; preds = %7
  ret void
}

declare dso_local i64 @TREE_VALUE(i64) #1

declare dso_local i32 @error(i8*, i8*, i8*) #1

declare dso_local i8* @OVL_CURRENT(i64) #1

declare dso_local i64 @OVL_NEXT(i64) #1

declare dso_local i64 @TREE_CHAIN(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
